--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "mailchimp/marketing",
+    "name": "hitgrab/mailchimp-marketing-php",
     "version": "4.0.0",
     "description": "Mailchimp Marketing API for PHP 8.x",
     "homepage": "https://github.com/HitGrab/mailchimp-marketing-php",
